# otio-aaf-adapter

./: .flake8  CONTRIBUTORS.md  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  create_draft_release.yaml  deploy_package.yaml  docs.yml
docs/: conf.py  gen_api_docs.py  index.rst  requirements.txt
docs/api/: otio-plugins.md
src/otio_aaf_adapter/: plugin_manifest.json
src/otio_aaf_adapter/adapters/: advanced_authoring_format.py
src/otio_aaf_adapter/adapters/aaf_adapter/: aaf_writer.py  hooks.py
tests/: test_aaf_adapter.py
tests/hooks_plugin_example/: plugin_manifest.json  post_aaf_read_transcribe_hook.py  post_aaf_write_transcribe_hook.py  pre_aaf_read_transcribe_hook.py  pre_aaf_write_transcribe_hook.py
tests/sample_data/: avid_data_track_example.aaf  multiple-markers-over-transitions.aaf  multiple-markers-over-transitions.txt  nested_audio_dissolve.aaf  time_warp_test.avid_media_composer.aaf
